WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35214
[chromium] fixes to make WebKit build on Solaris
https://bugs.webkit.org/show_bug.cgi?id=35214
Summary
[chromium] fixes to make WebKit build on Solaris
electricmonopole
Reported
2010-02-21 11:05:58 PST
Created
attachment 49154
[details]
patch
http://codereview.chromium.org/650015
Patch attach'd (url)
Attachments
patch
(58 bytes, text/plain)
2010-02-21 11:05 PST
,
electricmonopole
no flags
Details
revised patch
(1.59 KB, patch)
2010-02-21 11:47 PST
,
electricmonopole
no flags
Details
Formatted Diff
Diff
revised patch with re edited Changlog
(3.58 KB, patch)
2010-02-21 12:02 PST
,
electricmonopole
no flags
Details
Formatted Diff
Diff
fixed tab formatting
(1.64 KB, patch)
2010-02-22 05:46 PST
,
electricmonopole
fishd
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
another formatting fix
(1.65 KB, patch)
2010-02-23 12:12 PST
,
electricmonopole
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Evan Martin
Comment 1
2010-02-21 11:15:05 PST
WebKit has a more complicated patch submission process:
http://webkit.org/coding/contributing.html
. If you want, I can convert this into a proper WebKit submission for you.
electricmonopole
Comment 2
2010-02-21 11:26:34 PST
That would be great! I guess I'm missing a ChangeLog entry too.
electricmonopole
Comment 3
2010-02-21 11:47:59 PST
Created
attachment 49156
[details]
revised patch new patch using svn-create-patch, fix ChangeLog
Evan Martin
Comment 4
2010-02-21 11:55:06 PST
Can you link to the bug in the ChangeLog? Look at the nearby entries in the ChangeLog for reference. Also leave in the "Reviewed by NOBODY" bit, since the scripts need that. After that, once you've uploaded your patch, click the "details" link and change the review and commit-queue dropdowns to say "?", which asks someone to commit it for you.
electricmonopole
Comment 5
2010-02-21 12:02:10 PST
Created
attachment 49161
[details]
revised patch with re edited Changlog also fixed flags for review and commit-queue
electricmonopole
Comment 6
2010-02-22 05:46:54 PST
Created
attachment 49207
[details]
fixed tab formatting fix formatting in ChangeLog
Evan Martin
Comment 7
2010-02-22 06:20:20 PST
+darin for chromium webkit api review
WebKit Commit Bot
Comment 8
2010-02-22 14:14:14 PST
Comment on
attachment 49207
[details]
fixed tab formatting Rejecting patch 49207 from commit-queue. Failed to run "['/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', '--reviewer', 'Darin Fisher', '--force']" exit_code: 2 patching file ChangeLog patch: **** malformed patch at line 14: 2010-02-20 Noam Rosenthal <
noam.rosenthal@nokia.com
> patching file WebKit/chromium/src/WebFrameImpl.cpp patching file WebKit/chromium/src/WebViewImpl.cpp Full output:
http://webkit-commit-queue.appspot.com/results/299219
electricmonopole
Comment 9
2010-02-23 12:12:13 PST
Created
attachment 49316
[details]
another formatting fix Fixed formatting of ChangeLog to represent newest svn version.
WebKit Commit Bot
Comment 10
2010-02-23 15:00:01 PST
Comment on
attachment 49316
[details]
another formatting fix Clearing flags on attachment: 49316 Committed
r55174
: <
http://trac.webkit.org/changeset/55174
>
WebKit Commit Bot
Comment 11
2010-02-23 15:00:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug