2010-02-23  James Choi  <jchoi42@pha.jhu.edu>

Add Solaris definitions
        https://bugs.webkit.org/show_bug.cgi?id=35214

        * WebKit/chromium/src/WebViewImpl.cpp
        * WebKit/chromium/src/WebFrameImpl.cpp

git-svn-id: svn://svn.chromium.org/blink/trunk@55174 bbb929c8-8fbe-4397-9dbb-9b2b20218538